<resources>
    <string name="app_name">Orcs Attack!</string>
    <string name="app_description">Orcs Attack! is a collection of small programs that help you DM your pen and paper RPG.</string>
    <string name="test">This is my test string</string>
    <string name="add_to_party">Add to party</string>
    <string name="about_app">This app is a work in progress. It is being developed by myself in my spare time as a hobby and a way to learn more about Android developement. This app is completely ad-free and collects absolutely no personal data. If you want to report a bug
    or have an idea for a feature for the app, please contact me! I will be very glad to hear you out and try my best to implement it. Seriously, I would love hearing from you!
        All the code is open-source and available on <a href="https://www.github.com/arkountos/Initiative-Tracker">Github</a>. Feel free to check it out!
    </string>
    <string name="about_rate">If you enjoyed this app, give it a good rating! If not, give it a bad one! Eitherway, I would very much appreciate you contacting me with your thoughts and views on the app and thoughts on making it better.</string>
    <string name="about_attributions">The character and tile art for this application is from flaticon! Check them out here
        <div><a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>,<br /></div> <div><a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
        Content provided in this app is Open Gaming Content, published in the Systems Reference Document (SRD) available at dnd.wizards.com, licenced under Open Gaming Licence, Vesion 1.0a.
    </string>
    <string name="battle_to_start">Dynamic Battle Tracker</string>
    <string name="campfire_help">When you check the campfire box, a campfire appears near the middle of your map. If a campfire is present, allied characters appear close to the fire while enemy characters appear far from it.
    If no campfire is present, all the characters appear randomly. You can set the max distance from the fire that ally characters can spawn, as well as the minimum distance from the campfire for enemies to spawn from the settings tab.</string>
    <string name="artwork_jason">The background images were created by Jason Milios!</string>
    <string name="music_john">Music written and performed by John Skoufoulas!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequatur consequuntur culpa delectus eligendi error est, et eveniet fugiat inventore itaque iure iusto laborum mollitia nam nihil officiis omnis reiciendis sapiente sit, tempora totam voluptas! Accusantium consequuntur eligendi est excepturi fuga ipsam iusto, molestiae, perspiciatis quae reprehenderit tempore veniam vero!</string>
    <string-array name="fonts">
        <item name="blkchry">Black Chancery</item>
        <item name="bookinsanity">Book Insanity</item>
        <item name="mreavessmallcaps">Mr Eaves Small Caps</item>
        <item name="nodestocapscondensed">Nodesto Caps Condensed</item>
        <item name="scalysans">Scaly Sans</item>
        <item name="solberaimitation">Solbera Imitation</item>
        <item name="zatannamisdirection">Zatanna Misdirection</item>
    </string-array>
    <string-array name="classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="NPC_gender">
        <item>Female</item>
        <item>Male</item>
        <item>Can\'t tell</item>
    </string-array>
    <string-array name="NPC_races">
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
        <item>Halfling</item>
        <item>Gnome</item>
    </string-array>
    <string-array name="NPC_names_human_male">
        <item>Scipio</item>
        <item>Vitale</item>
        <item>Ludovico</item>
        <item>Raul</item>
        <item>Wright</item>
        <item>Leonardo</item>
        <item>Wilson</item>
        <item>Judah</item>
        <item>Whittaker</item>
        <item>Emmyrson</item>
        <item>Dorian</item>
        <item>Otmund</item>
        <item>Alkuin</item>
        <item>Gregor</item>
        <item>Jendrik</item>
        <item>Deniz</item>
    </string-array>
    <string-array name="NPC_names_human_female">
        <item>Eusebia</item>
        <item>Alita</item>
        <item>Zorra</item>
        <item>Eliana</item>
        <item>Nataly</item>
        <item>Nicki</item>
        <item>Clodia</item>
        <item>Ynes</item>
        <item>Silvina</item>
        <item>Royale</item>
        <item>Harvina</item>
        <item>Hilda</item>
        <item>Agatha</item>
        <item>Elli</item>
        <item>Marchelle</item>
        <item>Rea</item>
    </string-array>
    <string-array name="NPC_names_elf_male">
        <item>Tannivh</item>
        <item>Ilthuryn</item>
        <item>Aolis</item>
        <item>Dalyor</item>
        <item>Arathorn</item>
        <item>Almer</item>
        <item>Taerentym</item>
        <item>Sharian</item>
        <item>Kelvhan</item>
        <item>Inialos</item>
    </string-array>
    <string-array name="NPC_names_elf_female">
        <item>Radelia</item>
        <item>Elincia</item>
        <item>Immianthe</item>
        <item>Rania</item>
        <item>Geminara</item>
        <item>Nuovis</item>
        <item>Keerla</item>
        <item>Ratha</item>
        <item>Baerinda</item>
        <item>Soliana</item>
    </string-array>
    <string-array name="NPC_names_dwarf_male">
        <item>Kuri</item>
        <item>Humi</item>
        <item>Toir</item>
        <item>Norlum</item>
        <item>Dwomri</item>
        <item>Thrarrous</item>
        <item>Thragran</item>
        <item>Bemnarlig</item>
        <item>Rutrit</item>
        <item>Garhear</item>
    </string-array>
    <string-array name="NPC_names_dwarf_female">
        <item>Fen</item>
        <item>Gic</item>
        <item>Tuth</item>
        <item>Hot</item>
        <item>Morlug</item>
        <item>Grooghimli</item>
        <item>Thimatir</item>
        <item>Bhakharlum</item>
        <item>Grooldruli</item>
        <item>Darfack</item>
    </string-array>
    <string-array name="NPC_names_halfling_male">
        <item>Urifer</item>
        <item>Horhorn</item>
        <item>Idosire</item>
        <item>Anlan</item>
        <item>Ospos</item>
        <item>Zalumo</item>
        <item>Panos</item>
        <item>Uriver</item>
        <item>Davbin</item>
        <item>Valrin</item>
    </string-array>
    <string-array name="NPC_names_halfling_female">
        <item>Sakath</item>
        <item>Xisica</item>
        <item>Xiprys</item>
        <item>Rosrana</item>
        <item>Unatina</item>
        <item>Graree</item>
        <item>Darcey</item>
        <item>Fayvyre</item>
        <item>Calkath</item>
        <item>Hanys</item>
    </string-array>
    <string-array name="NPC_names_gnome_male">
        <item>Quahim</item>
        <item>Valner</item>
        <item>Bilpos</item>
        <item>Davlen</item>
        <item>Tanston</item>
        <item>Valrick</item>
        <item>Nesser</item>
        <item>Altor</item>
        <item>Umrug</item>
        <item>Lokur</item>
    </string-array>
    <string-array name="NPC_names_gnome_female">
        <item>Xyrogani</item>
        <item>Odamiphi</item>
        <item>Yogyra</item>
        <item>Zinpine</item>
        <item>Eltra</item>
        <item>Arissa</item>
        <item>Breedysa</item>
        <item>Galmyn</item>
        <item>Spiniana</item>
        <item>Sarhana</item>
    </string-array>
    <string-array name="NPC_alignment">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string-array name="NPC_charisma_checks">
        <item>Deception</item>
        <item>Intimidation</item>
        <item>Flirting</item>
        <item>Bribery</item>
        <item>Persuasion</item>
        <item>Blackmailing</item>
        <item>Bartering</item>
    </string-array>
    <string-array name="NPC_secrets">
        <item>Has committed murder</item>
        <item>Holds a recently stolen item</item>
        <item>Bounty-hunters are after him/her</item>
        <item>Has wronged an old friend</item>
        <item>Knows the true identity of an important political figure</item>
        <item>Holds a kidnapped person</item>
        <item>Has connection to a thieves guild</item>
        <item>Holds a long lost book about wizardry</item>
        <item>Knows the lair of a Dragon</item>
        <item>Has power over a ruling politician</item>
        <item>Is a very wealthy/powerful person in disguise</item>
        <item>Knows the position of a magic artifact</item>
        <item>Knows how to get to the lair of a bandit group</item>
        <item>Knows how to get to the lair of a powerful dark wizard</item>
        <item>Knows the secret code to get to an exclusive club/base</item>
        <item>Is planning on robbing/killing someone very soon</item>
        <item>Is a spy for a foreign power</item>
        <item>Is a doppelganger in disguise</item>
        <item>Know the road to an unknown place of power</item>
        <item>Knows a secret about an important figure in a nearby village/town</item>
    </string-array>
    <string-array name="NPC_characteristics">
        <item>Has a glass eye</item>
        <item>Walks with an oddly long cane</item>
        <item>Cannot talk because of a spell</item>
        <item>Speaks very slow</item>
        <item>Speaks very fast</item>
        <item>Does not speak common</item>
        <item>Has a scar on his/her face</item>
        <item>Has a wooden leg</item>
        <item>Has very long hair</item>
        <item>Has an ear cut off</item>
        <item>Is very beautiful</item>
        <item>Is really ugly</item>
        <item>Bites his/her nails</item>
        <item>Has very long fingers</item>
        <item>Is almost naked</item>
        <item>Refers to him/herself with his/her name</item>
        <item>Smokes a pipe</item>
        <item>Wears very big glasses</item>
        <item>Has bright blue hair</item>
        <item>Wears oversized clothes</item>
        <item>Smells wonderful</item>
        <item>Smells bad</item>
        <item>Has a dog follower</item>
        <item>Has a cat follower</item>
        <item>Animals always stay near him/her</item>
        <item>Has a very soft and calm voice</item>
        <item>Only talks with a few words</item>
        <item>Is always angry/irritated</item>
        <item>Wears a funny hat</item>
    </string-array>
</resources>